--- a/frontend/core/src/main/webapp/static/app/lists/listListItem.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listListItem.html
@@ -1,6 +1,6 @@
 <div class="group-mixed vertically-centered">
   <div class="group-mixed--left">
-    <a href class="onboarding-link-disable" ng-click="changeFeature('list', list, true)">
+    <a href class="onboarding-link-disable" swiper-click="changeFeature('list', list, true)">
       <span class="text-navigation-back large"></span>
     </a>
   </div>
