--- a/frontend/core/src/main/webapp/static/app/lists/listTasks.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listTasks.html
@@ -1,6 +1,5 @@
 <div class="container-content--outer" ng-if="isFeatureActive('list')" list-container drawer-handle="left">
-  <section class="container-content"
-    list="allTasks | itemsFilter:{name:'byList', filterBy: list}" swiper-prevent>
+  <section class="container-content" list="allTasks | itemsFilter:{name:'byList', filterBy: list}">
     <div class="group-mixed heading">
       <div class="group-mixed--middle">
         <h2 class="group-heading justified">
