--- a/frontend/core/src/main/webapp/static/app/lists/listsActive.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsActive.html
@@ -1,5 +1,5 @@
 <div class="container-content--outer" ng-if="isFeatureActive('lists')" list-container drawer-handle="left">
-  <section class="container-content" list="lists" list-locked="disableDragging()" swiper-prevent>
+  <section class="container-content" list="lists" list-locked="disableDragging()">
 
     <div ng-show="!onboardingInProgress || isOnboardingListItemAddActive()">
       <h2 class="group-heading justified row">active lists</h2>
