--- a/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
@@ -9,7 +9,7 @@
     </a>
   </div>
   <div ng-if="note.trans.favorited" class="group-mixed--right">
-    <a href ng-click="unfavoriteNote(note)">
+    <a href swiper-click="unfavoriteNote(note)">
       <span class="icon-star small"></span>
     </a>
   </div>
