--- a/frontend/core/src/main/webapp/static/app/notes/notesAll.html
+++ b/frontend/core/src/main/webapp/static/app/notes/notesAll.html
@@ -1,4 +1,4 @@
-<div class="container-fluid--inner" list-container drawer-handle="left">
+<div class="container-fluid--inner" list-container drawer-handle="left" swiper-prevent>
   <section class="container-content" list="allNotes" list-recent list-open="openEditor('note', getNewNote(), 'new')">
 
     <div ng-show="!onboardingInProgress">
