--- a/frontend/core/src/main/webapp/static/app/tasks/tasksAll.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksAll.html
@@ -1,5 +1,5 @@
 <div class="container-content--outer" ng-if="isFeatureActive('tasks')" list-container drawer-handle="left">
-  <section class="container-content" list="allTasks" list-recent swiper-prevent>
+  <section class="container-content" list="allTasks" list-recent>
 
     <div ng-show="!onboardingInProgress || isOnboardingListItemAddActive()">
       <div class="group-mixed heading">
