--- a/frontend/core/src/main/webapp/static/app/user/userEditor.html
+++ b/frontend/core/src/main/webapp/static/app/user/userEditor.html
@@ -2,7 +2,8 @@
   <header ng-if="mode !== 'signUp'" class="container-titlebar">
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large--top">
-        <a href class="group-symmetrical--left link-navigation highlighted" ng-click="closeEditor()">
+        <a href class="group-symmetrical--left link-navigation highlighted" ng-click="closeEditor()"
+          swiper-prevent>
           <span class="text-navigation-back">back</span>
         </a>
       </div>
