--- a/frontend/core/src/main/webapp/static/app/base/listPicker.html
+++ b/frontend/core/src/main/webapp/static/app/base/listPicker.html
@@ -1,25 +1,25 @@
 <div class="row-top-parent">
 
   <div ng-if="selectedList" class="group-mixed vertically-centered">
-    <a href class="group-mixed--middle link" ng-click="listSelected(selectedList)">
+    <a href class="group-mixed--middle link" swiper-click="listSelected(selectedList)">
       <span class="text-link emphasis" clamp=2>{{::prefix}}{{selectedList.trans.title}}</span>
     </a>
 
     <div class="group-mixed--right">
-      <button type="button" class="btn-clear" ng-click="listCleared(selectedList)"></button>
+      <button type="button" class="btn-clear" swiper-click="listCleared(selectedList)"></button>
     </div>
   </div>
 
   <div ng-if="newList" class="row-vertically-centered with-textarea">
     <textarea ng-model="newList.trans.title" msd-elastic
-      ng-click="watchForTitleChange()" ng-keydown="textareaKeyDown($event)"
+      swiper-click="watchForTitleChange()" ng-keydown="textareaKeyDown($event)"
       dynamic-placeholder="add {{type}}&#8230;" maxlength="128" autocapitalize="none" autocorrect="off">
     </textarea>
   </div>
 
   <div class="row-vertically-centered"
     ng-repeat="list in lists | filter:notSelectedList | orderBy:'trans.title' track by list.trans.uuid || $index"
-    ng-click="listSelected(list)">
+    swiper-click="listSelected(list)">
     <a href class="link">
       <span class="text-link" clamp=2>{{::prefix}}{{list.trans.title}}</span>
     </a>
@@ -27,7 +27,7 @@
 
   <div ng-if="archivedLists" class="row-vertically-centered"
     ng-repeat="archivedList in archivedLists | filter:notSelectedList track by archivedList.trans.uuid"
-    ng-click="listSelected(archivedList)">
+    swiper-click="listSelected(archivedList)">
     <a href class="link">
       <span class="text-link" ng-bind="archivedList.trans.title" clamp=2></span>
     </a>
