--- a/frontend/core/src/main/webapp/static/app/lists/listNotes.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listNotes.html
@@ -1,7 +1,6 @@
 <div class="container-content--outer" ng-if="isFeatureActive('list')" list-container>
-  <section class="container-content"
-    list="allNotes | itemsFilter:{name:'byList', filterBy: list}"
-    list-open="openEditor('note', getNewNote({list: list}), 'new')" swiper-prevent>
+  <section class="container-content" list="allNotes | itemsFilter:{name:'byList', filterBy: list}"
+    list-open="openEditor('note', getNewNote({list: list}), 'new')">
     <h2 class="group-heading justified row">notes</h2>
 
     <div class="animate-list-item-leave tall"
