--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
@@ -15,7 +15,7 @@
   </div>
   <div class="group-mixed--right">
     <a href class="link-navigation onboarding-hide" editable-field-deactivate
-      ng-click="openTaskEditor(newItem)">
+      swiper-click="openTaskEditor(newItem)">
       <span class="text-navigation-forward"></span>
     </a>
   </div>
