--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
@@ -1,5 +1,5 @@
 <div class="container-content--outer" ng-if="isFeatureActive('tasks')" list-container>
-  <section class="container-content" list="contexts" swiper-prevent>
+  <section class="container-content" list="contexts">
     <h2 class="group-heading justified row">contexts</h2>
     <div list-item-add="getNewContext()" list-item-add-save="saveContext(newItem)">
       <form role="form" class="group-mixed swiper-no-swiping"
@@ -13,7 +13,7 @@
           </textarea>
         </div>
         <div class="group-mixed--right">
-          <a href editable-field-deactivate ng-click="openEditor('tag', newItem)">
+          <a href editable-field-deactivate swiper-click="openEditor('tag', newItem)">
             <span class="text-navigation-forward"></span>
           </a>
         </div>
@@ -27,7 +27,7 @@
           <span class="text-link" clamp=2 ng-bind="'@' + context.trans.title"></span>
         </a>
         <div class="group-mixed--right">
-          <a href ng-click="swipeToContext(context)">
+          <a href swiper-click="swipeToContext(context)">
             <span class="text-navigation-forward large"></span>
           </a>
         </div>
@@ -39,7 +39,7 @@
         <span class="text-link">no context</span>
       </a>
       <div class="group-mixed--right">
-        <a href ng-click="swipeToContext()">
+        <a href swiper-click="swipeToContext()">
           <span class="text-navigation-forward large"></span>
         </a>
       </div>
